Removed CSS style from XML files and moved to dashboard.css; also updated old app name with new app name using built-in token

--- a/default/data/ui/views/all__automate__orchestration_automation_and_response.xml
+++ b/default/data/ui/views/all__automate__orchestration_automation_and_response.xml
@@ -18,7 +18,7 @@ Combine infrastructure orchestration, playbook automation and case management ca
       </div>
       <div class="related">
         <span class="bold">Related: </span>
-        <span><a href="/app/welcome-app/discover">All</a></span>
+        <span><a href="/app/$env:app$/discover">All</a></span>
       </div>
       <div class="basics">
         <h1>The Basics</h1>
