--- a/default/data/ui/views/all__collect__streaming.xml
+++ b/default/data/ui/views/all__collect__streaming.xml
@@ -17,7 +17,7 @@ Continuously collect high-velocity, high-volume data from diverse sources and di
       </div>
       <div class="related">
         <span class="bold">Related: </span>
-        <span><a href="/app/welcome-app/all__collect__forwarding">Forwarding</a></span>
+        <span><a href="/app/$env:app$/all__collect__forwarding">Forwarding</a></span>
       </div>
       <div class="basics">
         <h1>The Basics</h1>
