--- a/default/data/ui/views/devops__investigate__troubleshoot.xml
+++ b/default/data/ui/views/devops__investigate__troubleshoot.xml
@@ -17,9 +17,9 @@ Advanced filtering approach optimizes for the kind of data you are viewing. Isol
       </div>
       <div class="related">
         <span class="bold">Related: </span>
-<span><a href="/app/welcome-app/devops__investigate__incidents">Incidents</a>, </span>
-<span><a href="/app/welcome-app/devops__triage__alerts">Alerts</a>, </span>
-<span><a href="/app/welcome-app/devops__triage__tickets">Tickets</a></span>
+<span><a href="/app/$env:app$/devops__investigate__incidents">Incidents</a>, </span>
+<span><a href="/app/$env:app$/devops__triage__alerts">Alerts</a>, </span>
+<span><a href="/app/$env:app$/devops__triage__tickets">Tickets</a></span>
       </div>
       <div class="basics">
         <h1>The Basics</h1>
