--- a/default/data/ui/views/security__analyze__behavior.xml
+++ b/default/data/ui/views/security__analyze__behavior.xml
@@ -16,10 +16,10 @@ Behavior-based threat detection is based on machine learning methodologies that 
       </div>
       <div class="related">
         <span class="bold">Related: </span>
-<span><a href="/app/welcome-app/security__monitor__threats">Threats</a>, </span>
-<span><a href="/app/welcome-app/security__monitor__risk">Risk</a>, </span>
-<span><a href="/app/welcome-app/security__analyze__fraud">Fraud</a>, </span>
-<span><a href="/app/welcome-app/security__analyze__machine_learning">Machine Learning</a></span>
+<span><a href="/app/$env:app$/security__monitor__threats">Threats</a>, </span>
+<span><a href="/app/$env:app$/security__monitor__risk">Risk</a>, </span>
+<span><a href="/app/$env:app$/security__analyze__fraud">Fraud</a>, </span>
+<span><a href="/app/$env:app$/security__analyze__machine_learning">Machine Learning</a></span>
       </div>
       <div class="basics">
         <h1>The Basics</h1>
