--- a/default/data/ui/views/security__triage__notable_events.xml
+++ b/default/data/ui/views/security__triage__notable_events.xml
@@ -22,9 +22,9 @@ Splunk Enterprise Security detects patterns in your data and automatically revie
       </div>
       <div class="related">
         <span class="bold">Related: </span>
-<span><a href="/app/welcome-app/security__investigate__incidents">Incidents</a>, </span>
-<span><a href="/app/welcome-app/security__triage__alerts">Alerts</a>, </span>
-<span><a href="/app/welcome-app/security__triage__tickets">Tickets</a></span>
+<span><a href="/app/$env:app$/security__investigate__incidents">Incidents</a>, </span>
+<span><a href="/app/$env:app$/security__triage__alerts">Alerts</a>, </span>
+<span><a href="/app/$env:app$/security__triage__tickets">Tickets</a></span>
       </div>
       <div class="basics">
         <h1>The Basics</h1>
