--- a/appserver/static/_dashboard.css
+++ b/appserver/static/_dashboard.css
@@ -25,6 +25,14 @@
 	border-radius: 5px;
 }
 
+div.action-header img {
+    position: absolute;
+    z-index: 2;
+    top: 5;
+    left: 0;
+    margin-left: 10px;
+}
+
 #collect .panel-body.html {
 	background-color: rgb(242, 244, 245);
 }
@@ -99,4 +107,20 @@
 .help {
 	margin-top: 45px;
 }
+
+.learn-more-panel-title {
+    display: block;
+    margin: 10px 0;
+    margin-block-start: 10px;
+    margin-block-end: 10px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 20px;
+    text-transform: none;
+    color: #3c444d;
+    text-rendering: optimizelegibility;
+}
+
 
