--- a/default/data/ui/views/devops__monitor__applications.xml
+++ b/default/data/ui/views/devops__monitor__applications.xml
@@ -16,11 +16,11 @@ Splunk Application Performance Monitoring (APM) works with any cloud environment
       </div>
       <div class="related">
         <span class="bold">Related: </span>
-<span><a href="/app/welcome-app/devops__investigate__incidents">Incidents</a>, </span>
-<span><a href="/app/welcome-app/devops__monitor__cloud">Cloud</a>, </span>
-<span><a href="/app/welcome-app/devops__monitor__user_experience">User Experience</a>, </span>
-<span><a href="/app/welcome-app/devops__triage__alerts">Alerts</a>, </span>
-<span><a href="/app/welcome-app/devops__triage__tickets">Tickets</a></span>
+<span><a href="/app/$env:app$/devops__investigate__incidents">Incidents</a>, </span>
+<span><a href="/app/$env:app$/devops__monitor__cloud">Cloud</a>, </span>
+<span><a href="/app/$env:app$/devops__monitor__user_experience">User Experience</a>, </span>
+<span><a href="/app/$env:app$/devops__triage__alerts">Alerts</a>, </span>
+<span><a href="/app/$env:app$/devops__triage__tickets">Tickets</a></span>
       </div>
       <div class="basics">
         <h1>The Basics</h1>
