--- a/default/data/ui/views/devops__monitor__user_experience.xml
+++ b/default/data/ui/views/devops__monitor__user_experience.xml
@@ -17,11 +17,11 @@ Understand the impact of problems, latency and bugs on the experience of users. 
       </div>
       <div class="related">
         <span class="bold">Related: </span>
-<span><a href="/app/welcome-app/devops__investigate__incidents">Incidents</a>, </span>
-<span><a href="/app/welcome-app/devops__monitor__cloud">Cloud</a>, </span>
-<span><a href="/app/welcome-app/devops__monitor__applications">Applications</a>, </span>
-<span><a href="/app/welcome-app/devops__triage__alerts">Alerts</a>, </span>
-<span><a href="/app/welcome-app/devops__triage__tickets">Tickets</a></span>
+<span><a href="/app/$env:app$/devops__investigate__incidents">Incidents</a>, </span>
+<span><a href="/app/$env:app$/devops__monitor__cloud">Cloud</a>, </span>
+<span><a href="/app/$env:app$/devops__monitor__applications">Applications</a>, </span>
+<span><a href="/app/$env:app$/devops__triage__alerts">Alerts</a>, </span>
+<span><a href="/app/$env:app$/devops__triage__tickets">Tickets</a></span>
       </div>
       <div class="basics">
         <h1>The Basics</h1>
