--- a/default/data/ui/views/itops__analyze__aiops.xml
+++ b/default/data/ui/views/itops__analyze__aiops.xml
@@ -17,11 +17,11 @@ Get end-to-end service monitoring, predictive management and full-stack visibili
       </div>
       <div class="related">
         <span class="bold">Related: </span>
-<span><a href="/app/welcome-app/itops__monitor__infrastructure">Infrastructure</a>, </span>
-<span><a href="/app/welcome-app/itops__monitor__cloud">Cloud</a>, </span>
-<span><a href="/app/welcome-app/itops__monitor__services">Services</a>, </span>
-<span><a href="/app/welcome-app/itops__analyze__machine_learning">Machine Learning</a>, </span>
-<span><a href="/app/welcome-app/itops__analyze__insights">Insights</a></span>
+<span><a href="/app/$env:app$/itops__monitor__infrastructure">Infrastructure</a>, </span>
+<span><a href="/app/$env:app$/itops__monitor__cloud">Cloud</a>, </span>
+<span><a href="/app/$env:app$/itops__monitor__services">Services</a>, </span>
+<span><a href="/app/$env:app$/itops__analyze__machine_learning">Machine Learning</a>, </span>
+<span><a href="/app/$env:app$/itops__analyze__insights">Insights</a></span>
       </div>
       <div class="basics">
         <h1>The Basics</h1>
