--- a/default/data/ui/views/itops__analyze__machine_learning.xml
+++ b/default/data/ui/views/itops__analyze__machine_learning.xml
@@ -17,10 +17,10 @@ Machine learning is the field of computer science working to develop computer sy
       </div>
       <div class="related">
         <span class="bold">Related: </span>
-<span><a href="/app/welcome-app/all__collect__streaming">Streaming</a>, </span>
-<span><a href="/app/welcome-app/itops__monitor__services">Services</a>, </span>
-<span><a href="/app/welcome-app/itops__analyze__aiops">AIOps</a>, </span>
-<span><a href="/app/welcome-app/itops__analyze__insights">Insights</a></span>
+<span><a href="/app/$env:app$/all__collect__streaming">Streaming</a>, </span>
+<span><a href="/app/$env:app$/itops__monitor__services">Services</a>, </span>
+<span><a href="/app/$env:app$/itops__analyze__aiops">AIOps</a>, </span>
+<span><a href="/app/$env:app$/itops__analyze__insights">Insights</a></span>
       </div>
       <div class="basics">
         <h1>The Basics</h1>
