--- a/default/data/ui/views/itops__investigate__incidents.xml
+++ b/default/data/ui/views/itops__investigate__incidents.xml
@@ -18,11 +18,11 @@ Splunk IT Service Intelligence (ITSI) is an analytics and IT management solution
       </div>
       <div class="related">
         <span class="bold">Related: </span>
-        <span><a href="/app/welcome-app/itops__triage__alerts">Alerts</a>, </span>
-        <span><a href="/app/welcome-app/itops__triage__notable_events">Notable Events</a>, </span>
-        <span><a href="/app/welcome-app/itops__triage__episodes">Episodes</a>, </span>
-        <span><a href="/app/welcome-app/itops__triage__tickets">Tickets</a>, </span>
-        <span><a href="/app/welcome-app/itops__analyze__machine_learning">Machine Learning</a></span>
+        <span><a href="/app/$env:app$/itops__triage__alerts">Alerts</a>, </span>
+        <span><a href="/app/$env:app$/itops__triage__notable_events">Notable Events</a>, </span>
+        <span><a href="/app/$env:app$/itops__triage__episodes">Episodes</a>, </span>
+        <span><a href="/app/$env:app$/itops__triage__tickets">Tickets</a>, </span>
+        <span><a href="/app/$env:app$/itops__analyze__machine_learning">Machine Learning</a></span>
       </div>
       <div class="basics">
         <h1>The Basics</h1>
