--- a/default/data/ui/views/itops__monitor__cloud.xml
+++ b/default/data/ui/views/itops__monitor__cloud.xml
@@ -16,11 +16,11 @@ Splunk Infrastructure Monitoring offers insight into your infrastructure and res
       </div>
       <div class="related">
         <span class="bold">Related: </span>
-        <span><a href="/app/welcome-app/itops__investigate__incidents">Incidents</a>, </span>
-        <span><a href="/app/welcome-app/itops__monitor__infrastructure">Infrastructure</a>, </span>
-        <span><a href="/app/welcome-app/itops__monitor__services">Services</a>, </span>
-        <span><a href="/app/welcome-app/itops__triage__alerts">Alerts</a>, </span>
-        <span><a href="/app/welcome-app/itops__triage__tickets">Tickets</a></span>
+        <span><a href="/app/$env:app$/itops__investigate__incidents">Incidents</a>, </span>
+        <span><a href="/app/$env:app$/itops__monitor__infrastructure">Infrastructure</a>, </span>
+        <span><a href="/app/$env:app$/itops__monitor__services">Services</a>, </span>
+        <span><a href="/app/$env:app$/itops__triage__alerts">Alerts</a>, </span>
+        <span><a href="/app/$env:app$/itops__triage__tickets">Tickets</a></span>
       </div>
       <div class="basics">
         <h1>The Basics</h1>
