--- a/default/data/ui/views/itops__monitor__services.xml
+++ b/default/data/ui/views/itops__monitor__services.xml
@@ -15,12 +15,12 @@ A service is a set of interconnected applications and hosts that are configured 
       </div>
       <div class="related">
         <span class="bold">Related: </span>
-<span><a href="/app/welcome-app/itops__investigate__incidents">Incidents</a>, </span>
-<span><a href="/app/welcome-app/itops__monitor__infrastructure">Infrastructure</a>, </span>
-<span><a href="/app/welcome-app/itops__monitor__cloud">Cloud</a>, </span>
-<span><a href="/app/welcome-app/itops__triage__alerts">Alerts</a>, </span>
-<span><a href="/app/welcome-app/itops__triage__tickets">Tickets</a>, </span>
-<span><a href="/app/welcome-app/itops__analyze__insights">Insights</a></span>
+<span><a href="/app/$env:app$/itops__investigate__incidents">Incidents</a>, </span>
+<span><a href="/app/$env:app$/itops__monitor__infrastructure">Infrastructure</a>, </span>
+<span><a href="/app/$env:app$/itops__monitor__cloud">Cloud</a>, </span>
+<span><a href="/app/$env:app$/itops__triage__alerts">Alerts</a>, </span>
+<span><a href="/app/$env:app$/itops__triage__tickets">Tickets</a>, </span>
+<span><a href="/app/$env:app$/itops__analyze__insights">Insights</a></span>
       </div>
       <div class="basics">
         <h1>The Basics</h1>
