--- a/default/data/ui/views/itops__triage__alerts.xml
+++ b/default/data/ui/views/itops__triage__alerts.xml
@@ -17,9 +17,9 @@ Deliver the right alerts to the right people reducing time to acknowledge and re
       </div>
       <div class="related">
         <span class="bold">Related: </span>
-<span><a href="/app/welcome-app/itops__triage__notable_events">Notable Events</a>, </span>
-<span><a href="/app/welcome-app/itops__triage__episodes">Episodes</a>, </span>
-<span><a href="/app/welcome-app/itops__triage__tickets">Tickets</a></span>
+<span><a href="/app/$env:app$/itops__triage__notable_events">Notable Events</a>, </span>
+<span><a href="/app/$env:app$/itops__triage__episodes">Episodes</a>, </span>
+<span><a href="/app/$env:app$/itops__triage__tickets">Tickets</a></span>
       </div>
       <div class="basics">
         <h1>The Basics</h1>
