--- a/default/data/ui/views/security__analyze__ai.xml
+++ b/default/data/ui/views/security__analyze__ai.xml
@@ -17,11 +17,11 @@ Artificial intelligence (AI) is the ability of machines to observe, think and re
       </div>
       <div class="related">
         <span class="bold">Related: </span>
-<span><a href="/app/welcome-app/security__monitor__threats">Threats</a>, </span>
-<span><a href="/app/welcome-app/security__monitor__risk">Risk</a>, </span>
-<span><a href="/app/welcome-app/security__triage__riskbased_alerting">Risk-based Alerting</a>, </span>
-<span><a href="/app/welcome-app/security__analyze__fraud">Fraud</a>, </span>
-<span><a href="/app/welcome-app/security__analyze__machine_learning">Machine Learning</a></span>
+<span><a href="/app/$env:app$/security__monitor__threats">Threats</a>, </span>
+<span><a href="/app/$env:app$/security__monitor__risk">Risk</a>, </span>
+<span><a href="/app/$env:app$/security__triage__riskbased_alerting">Risk-based Alerting</a>, </span>
+<span><a href="/app/$env:app$/security__analyze__fraud">Fraud</a>, </span>
+<span><a href="/app/$env:app$/security__analyze__machine_learning">Machine Learning</a></span>
       </div>
       <div class="basics">
         <h1>The Basics</h1>
