--- a/default/data/ui/views/security__investigate__forensics.xml
+++ b/default/data/ui/views/security__investigate__forensics.xml
@@ -17,7 +17,7 @@ Reduce dwell times with automated investigations. Reduce response times with pla
       </div>
       <div class="related">
         <span class="bold">Related: </span>
-<span><a href="/app/welcome-app/security__investigate__incidents">Incidents</a></span>
+<span><a href="/app/$env:app$/security__investigate__incidents">Incidents</a></span>
       </div>
       <div class="basics">
         <h1>The Basics</h1>
