--- a/default/data/ui/views/security__triage__alerts.xml
+++ b/default/data/ui/views/security__triage__alerts.xml
@@ -18,8 +18,8 @@ Deliver the right alerts to the right people reducing time to acknowledge and re
       </div>
       <div class="related">
         <span class="bold">Related: </span>
-<span><a href="/app/welcome-app/security__triage__notable_events">Notable Events</a>, </span>
-<span><a href="/app/welcome-app/security__triage__tickets">Tickets</a></span>
+<span><a href="/app/$env:app$/security__triage__notable_events">Notable Events</a>, </span>
+<span><a href="/app/$env:app$/security__triage__tickets">Tickets</a></span>
       </div>
       <div class="basics">
         <h1>The Basics</h1>
