--- a/default/data/ui/views/security__triage__tickets.xml
+++ b/default/data/ui/views/security__triage__tickets.xml
@@ -16,9 +16,9 @@ Splunk Enterprise Security provides an Investigations page where you can start, 
       </div>
       <div class="related">
         <span class="bold">Related: </span>
-<span><a href="/app/welcome-app/security__triage__alerts">Alerts</a>, </span>
-<span><a href="/app/welcome-app/security__triage__notable_events">Notable Events</a>, </span>
-<span><a href="/app/welcome-app/security__triage__riskbased_alerting">Risk-based Alerting</a></span>
+<span><a href="/app/$env:app$/security__triage__alerts">Alerts</a>, </span>
+<span><a href="/app/$env:app$/security__triage__notable_events">Notable Events</a>, </span>
+<span><a href="/app/$env:app$/security__triage__riskbased_alerting">Risk-based Alerting</a></span>
       </div>
       <div class="basics">
         <h1>The Basics</h1>
