Hide edit/export controls and the entire title bar on the two main dashboards

--- a/default/data/ui/views/devops__triage__alerts.xml
+++ b/default/data/ui/views/devops__triage__alerts.xml
@@ -1,4 +1,4 @@
-<dashboard hideExport="true">
+<dashboard hideExport="true" hideEdit="true">
   <label>DevOps - Triage - Alerts</label>
   <row id="main">
     <panel>
