--- a/default/data/ui/views/itops__analyze__insights.xml
+++ b/default/data/ui/views/itops__analyze__insights.xml
@@ -1,4 +1,4 @@
-<dashboard hideExport="true">
+<dashboard hideExport="true" hideEdit="true">
   <label>ITOps - Analyze - Insights</label>
   <row id="main">
     <panel>
