--- a/default/data/ui/views/security__investigate__threat_hunting.xml
+++ b/default/data/ui/views/security__investigate__threat_hunting.xml
@@ -1,4 +1,4 @@
-<dashboard hideExport="true">
+<dashboard hideExport="true" hideEdit="true">
   <label>Security - Investigate - Threat Hunting</label>
   <row id="main">
     <panel>
