--- a/default/data/ui/views/all__automate__orchestration_automation_and_response.xml
+++ b/default/data/ui/views/all__automate__orchestration_automation_and_response.xml
@@ -1,4 +1,4 @@
-<dashboard hideExport="true">
+<dashboard hideExport="true" hideEdit="true">
   <label>All - Automate - Orchestration, Automation, and Response</label>
   <row id="main">
     <panel>
