--- a/default/data/ui/views/all__collect__forwarding.xml
+++ b/default/data/ui/views/all__collect__forwarding.xml
@@ -1,4 +1,4 @@
-<dashboard hideExport="true">
+<dashboard hideExport="true" hideEdit="true">
   <label>All - Collect - Forwarding</label>
   <row id="main">
     <panel>
