--- a/default/data/ui/views/all__collect__streaming.xml
+++ b/default/data/ui/views/all__collect__streaming.xml
@@ -1,4 +1,4 @@
-<dashboard hideExport="true">
+<dashboard hideExport="true" hideEdit="true">
 <label>All - Collect - Streaming</label>
 <row id="main">
   <panel>
