--- a/default/data/ui/views/devops__monitor__applications.xml
+++ b/default/data/ui/views/devops__monitor__applications.xml
@@ -1,4 +1,4 @@
-<dashboard hideExport="true">
+<dashboard hideExport="true" hideEdit="true">
   <label>DevOps - Monitor - Applications</label>
   <row id="main">
     <panel>
