--- a/default/data/ui/views/itops__investigate__incidents.xml
+++ b/default/data/ui/views/itops__investigate__incidents.xml
@@ -1,4 +1,4 @@
-<dashboard hideExport="true">
+<dashboard hideExport="true" hideEdit="true">
   <label>ITOps - Investigate - Incidents</label>
   <row id="main">
     <panel>
