--- a/default/data/ui/views/itops__triage__tickets.xml
+++ b/default/data/ui/views/itops__triage__tickets.xml
@@ -1,4 +1,4 @@
-<dashboard hideExport="true">
+<dashboard hideExport="true" hideEdit="true">
   <label>ITOps - Triage - Tickets</label>
   <row id="main">
     <panel>
