--- a/default/data/ui/views/security__analyze__behavior.xml
+++ b/default/data/ui/views/security__analyze__behavior.xml
@@ -1,4 +1,4 @@
-<dashboard hideExport="true">
+<dashboard hideExport="true" hideEdit="true">
   <label>Security - Analyze - Behavior</label>
   <row id="main">
     <panel>
