--- a/default/data/ui/views/security__analyze__machine_learning.xml
+++ b/default/data/ui/views/security__analyze__machine_learning.xml
@@ -1,4 +1,4 @@
-<dashboard hideExport="true">
+<dashboard hideExport="true" hideEdit="true">
   <label>Security - Analyze - Machine Learning</label>
   <row id="main">
     <panel>
