--- a/default/data/ui/views/security__investigate__forensics.xml
+++ b/default/data/ui/views/security__investigate__forensics.xml
@@ -1,4 +1,4 @@
-<dashboard hideExport="true">
+<dashboard hideExport="true" hideEdit="true">
   <label>Security - Investigate - Forensics</label>
   <row id="main">
     <panel>
