--- a/default/data/ui/views/security__monitor__risk.xml
+++ b/default/data/ui/views/security__monitor__risk.xml
@@ -1,4 +1,4 @@
-<dashboard hideExport="true">
+<dashboard hideExport="true" hideEdit="true">
   <label>Security - Monitor - Risk</label>
   <row id="main">
     <panel>
