--- a/default/data/ui/views/security__triage__riskbased_alerting.xml
+++ b/default/data/ui/views/security__triage__riskbased_alerting.xml
@@ -1,4 +1,4 @@
-<dashboard hideExport="true">
+<dashboard hideExport="true" hideEdit="true">
   <label>Security - Triage - Risk-based Alerting</label>
   <row id="main">
     <panel>
