Added version property to <dashboard> tag in all dashboards

--- a/default/data/ui/views/devops__analyze__machine_learning.xml
+++ b/default/data/ui/views/devops__analyze__machine_learning.xml
@@ -1,4 +1,4 @@
-<dashboard hideExport="true" hideEdit="true">
+<dashboard hideExport="true" hideEdit="true" version="1.1">
   <label>DevOps - Analyze - Machine Learning</label>
   <row id="main">
     <panel>
