--- a/default/data/ui/views/devops__monitor__cloud.xml
+++ b/default/data/ui/views/devops__monitor__cloud.xml
@@ -1,4 +1,4 @@
-<dashboard hideExport="true" hideEdit="true">
+<dashboard hideExport="true" hideEdit="true" version="1.1">
   <label>DevOps - Monitor - Cloud</label>
   <row id="main">
     <panel>
