--- a/default/data/ui/views/discover.xml
+++ b/default/data/ui/views/discover.xml
@@ -1,4 +1,4 @@
-<dashboard hideExport="true" hideTitle="true">
+<dashboard hideExport="true" hideTitle="true" version="1.1">
   <label>Discover</label>
   <description>The Data-to-Everything&#8482; Platform, Powering Security, IT and DevOps.</description>
   <init>
