--- a/default/data/ui/views/itops__analyze__aiops.xml
+++ b/default/data/ui/views/itops__analyze__aiops.xml
@@ -1,4 +1,4 @@
-<dashboard hideExport="true" hideEdit="true">
+<dashboard hideExport="true" hideEdit="true" version="1.1">
   <label>ITOps - Analyze - AIOps</label>
   <row id="main">
     <panel>
