--- a/default/data/ui/views/itops__monitor__infrastructure.xml
+++ b/default/data/ui/views/itops__monitor__infrastructure.xml
@@ -1,4 +1,4 @@
-<dashboard hideExport="true" hideEdit="true">
+<dashboard hideExport="true" hideEdit="true" version="1.1">
   <label>ITOps - Monitor - Infrastructure</label>
   <row id="main">
     <panel>
