--- a/default/data/ui/views/security__analyze__ai.xml
+++ b/default/data/ui/views/security__analyze__ai.xml
@@ -1,4 +1,4 @@
-<dashboard hideExport="true" hideEdit="true">
+<dashboard hideExport="true" hideEdit="true" version="1.1">
   <label>Security - Analyze - AI</label>
   <row id="main">
     <panel>
